--- a/tcc3portal/portal/templates/page2.html
+++ b/tcc3portal/portal/templates/page2.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="text-center">TCC3 Portal</h1>
-        <h2 class="text-center">Page2</h2>
+        <h1 class="text-center">{{ _('TCC3 Portal') }}</h1>
+        <h2 class="text-center">{{ _('Page2') }}</h2>
     </div>
 {% endblock %}
