--- a/tcc3portal/tcc_frontend/templates/frontend/base.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/base.html
@@ -4,9 +4,9 @@
 {#{% set subtitle = "Index" %}#}
 {#{% set titledetails = "a title details infomation after the web site title" %}#}
 
-{% set default_title = "TCC3 Portal" %}
+{% set default_title = _("TCC3 Portal") %}
 {% set default_subtitle = None %}
-{% set default_title_details = "A TCC3 flask web portal site frame" %}
+{% set default_title_details = _("A TCC3 flask web portal site frame") %}
 {% set current_title = None %}
 {% set current_subtitle = None %}
 {% set current_title_details = None %}
