--- a/tcc3portal/tcc_frontend/templates/frontend/errors/404.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/errors/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 {% block inner_content %}
-<h1 class="text-center">404 Page Not Found.</h1>
+<h1 class="text-center">404 {{ _('Page Not Found.') }}</h1>
 {% endblock %}
 </div>
 {% endblock %}
