--- a/tcc3portal/tcc_frontend/templates/frontend/errors/500.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/errors/500.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 {% block inner_content %}
-<h1 class="text-center">500 Internal Server Error</h1>
+<h1 class="text-center">500 {{ _('Internal Server Error.') }}</h1>
 {% endblock %}
 </div>
 {% endblock %}
