--- a/tcc3portal/api/templates/layouts/base.html
+++ b/tcc3portal/api/templates/layouts/base.html
@@ -2,16 +2,16 @@
 {% import "./macros/utils.html" as utils %}
 
 {#set a sub title or a title details, if you wanna. #}
-{% set subtitle = "Api" %}
+{% set subtitle = _('Api') %}
 {#{% set titledetails = "a title details infomation after the web site title" %}#}
 
 
 {% block navbar_main_ul_items %}
-    <li {{ utils.try_active_style('list.api_list') }}><a href="{{ url_for('list.api_list') }}">Home</a></li>
-    <li {{ utils.try_active_style('#') }}><a href="#">Page2</a></li>
-    <li {{ utils.try_active_style('#') }}><a href="#">Page3</a></li>
+    <li {{ utils.try_active_style('list.api_list') }}><a href="{{ url_for('list.api_list') }}">{{ _('Home') }}</a></li>
+    <li {{ utils.try_active_style('#') }}><a href="#">{{ _('OtherPage1') }}</a></li>
+    <li {{ utils.try_active_style('#') }}><a href="#">{{ _('OtherPage2') }}</a></li>
     <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Tech Support<b class="caret"></b></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ _('Tech Support') }}<b class="caret"></b></a>
         <ul class="dropdown-menu menu-top">
             <li><a href="http://dormousehole.readthedocs.org/en/latest/index.html">flask</a></li>
             <li><a href="http://docs.jinkan.org/docs/flask-wtf/index.html">flask-wtf</a></li>
@@ -22,11 +22,11 @@
             <li class="divider" role="separator"></li>
             <li><a href="https://www.mongodb.org/">mongodb</a></li>
             <li class="dropdown-submenu">
-                <a class="dropdown-toggle" href="#">Level 2 menu</a>
+                <a class="dropdown-toggle" href="#">{{ _('Level 2 menu') }}</a>
                 <ul class="dropdown-menu">
-                    <li><a>Level 3 Item</a></li>
-                    <li><a>Level 3 Item</a></li>
-                    <li><a>Level 3 Item</a></li>
+                    <li><a>{{ _('Level 3 menu') }}</a></li>
+                    <li><a>{{ _('Level 3 menu') }}</a></li>
+                    <li><a>{{ _('Level 3 menu') }}</a></li>
                 </ul>
             </li>
         </ul>
