--- a/tcc3portal/tcc_frontend/templates/frontend/footer.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/footer.html
@@ -3,9 +3,13 @@
         <footer >
             <div class="text-center">
                 {% block footer_center %}
-                Powered  by <a href="http://dormousehole.readthedocs.org/en/latest/index.html">Flask</a>
+                {% autoescape false %}
+                {{ _('Powered by %(flask)s', flask='<a href="%s">Flask</a>' % 'http://dormousehole.readthedocs.org/en/latest/index.html') }}
+                {% endautoescape %}
                 |
-                Copyright &copy; 2015, <a href="mailto:vito2015@live.com">Vito</a>
+                {% autoescape false %}
+                {{ _('Copyright &copy; 2015, %(author)s', author= '<a href="mailto:vito2015@live.com">Vito</a>') }}
+                {% endautoescape %}
                 {% endblock %}
             </div>
         </footer>
