--- a/tcc3portal/tcc_frontend/templates/frontend/navbar_login.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/navbar_login.html
@@ -4,7 +4,7 @@
         <a id='l2' style="border-bottom:none;display: inline-block" href="{{ url_for('sso.register') }}", target="_blank">{{ _('Signup') }}</a></li>
 {% else %}
     <li class="dropdown pull-right" style="margin: 0 12px 0 0">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ g.user.name }}<b class="caret"></b></a>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{ g.user.nick_name }}<b class="caret"></b></a>
         <ul class="dropdown-menu ">
             <li><a href="#">{{ _('Profile') }}</a></li>
             <li class="divider" role="separator"></li>
