add new flask sub_app -> 'train' to traindev branch.

--- a/tcc3portal/portal/templates/layouts/base.html
+++ b/tcc3portal/portal/templates/layouts/base.html
@@ -39,6 +39,7 @@
 {% endblock %}
 
 {% block navbar_main_right_ul_items %}
+    <li><a href="/train">{{ _('Train Analysis') }}</a></li>
     <li><a href="/api">{{ _('Api') }}</a></li>
     {{ super() }}
 
