--- a/tcc3portal/tcc_frontend/templates/frontend/base.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/base.html
@@ -82,7 +82,13 @@
 {% block styles -%}
     {{super()}}  {# do not forget to call super or Bootstrap's own stylesheets
                     will disappear! #}
+    <script src="{{tcc_frontend_find_resource('js/jquery/jquery-1.11.3.min.js', cdn='local')}}"></script>
+    <link href="{{tcc_frontend_find_resource('bootstrap-datepicker-1.5.0-dist/css/bootstrap-datepicker.css', cdn='local')}}" rel="stylesheet">
     <link href="{{tcc_frontend_find_resource('css/frontend-default.css', cdn='local')}}" rel="stylesheet">
+    <link href="{{tcc_frontend_find_resource('bootsidemenu/css/BootSideMenu.css', cdn='local')}}" rel="stylesheet">
+    <script src="{{tcc_frontend_find_resource('bootstrap-datepicker-1.5.0-dist/js/bootstrap-datepicker.js', cdn='local')}}"></script>
+    <script src="{{tcc_frontend_find_resource('bootsidemenu/js/BootSideMenu.js', cdn='local')}}"></script>
+
 {% endblock %}
 
 {% block scripts %}
