--- a/tcc3portal/train/templates/dashboard.html
+++ b/tcc3portal/train/templates/dashboard.html
@@ -2,8 +2,91 @@
 {% import "macros/utils.html" as utils_local %}
 
 {% block content %}
-<div class="">
-<h1 class="text-center">Train data analysis system</h1>
-<h2 class="text-center">Dashboard</h2>
+{#<div class="">#}
+{#<h1 class="text-center">Train data analysis system</h1>#}
+{#<h2 class="text-center">Dashboard</h2>#}
+{#</div>#}
+<div class="container-fluid">
+    <div class="row">
+        <div id="sidebar" class=" col-md-2 col-md-5 col-md-2 ">
+        {#            <select class="combobox" name="lineid" style="width:100px; ">#}
+        {#                <option value="01">01</option>#}
+        {#                <option value="02">02</option>#}
+        {#                <option value="04">04</option>#}
+        {#                <option value="05">05</option>#}
+        {#                <option value="05">06</option>#}
+        {#            </select>#}
+        {#            <script type="text/javascript">#}
+        {#                $('.combobox').combobox()#}
+        {#            </script>#}
+
+            <div class="input-group">
+            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="true">
+            Line ID
+            <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><a href="#">01</a></li>
+            <li><a href="#">02</a></li>
+            <li><a href="#">04</a></li>
+            <li><a href="#">05</a></li>
+            <li><a href="#">06</a></li>
+            <li><a href="#">07</a></li>
+            <li><a href="#">08</a></li>
+            <li><a href="#">09</a></li>
+            <li><a href="#">10</a></li>
+            <li><a href="#">13</a></li>
+            <li><a href="#">14</a></li>
+            <li><a href="#">15</a></li>
+            <li><a href="#">94</a></li>
+            <li><a href="#">95</a></li>
+            <li><a href="#">96</a></li>
+            <li><a href="#">97</a></li>
+            <li><a href="#">98</a></li>
+            </ul>
+            </div>
+
+            <div id="datepicker-container" >
+            <div class="input-group date">
+            <input type="text" class="form-control" readonly>
+            <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+            </div>
+            <script>
+            $('#datepicker-container .input-group.date').datepicker({
+            autoclose: false,
+            todayBtn: "linked",
+            format: "mm/dd/yyyy",
+            orientation: "bottom auto",
+            });
+            </script>
+            </div>
+
+            <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default">Reset</button>
+            <button type="button" class="btn btn-default" >Confirm</button>
+            </div>
+            <script>
+                    $('#sidebar').BootSideMenu({
+                        side:"left", // left or right
+                        autoClose:true // auto close when page loads
+                    });
+            </script>
+            </div>
+            <div id="train_graph" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            </div>
+        </div>
 </div>
+
+{% endblock %}
+
+{% block styles %}
+    {{ super() }}
+{#    {{ utils.static_css("bootstrap/bootstrap-datetimepicker.css") }}#}
+
+{% endblock %}
+{% block scripts %}
+    {{ super() }}
+{#    {{ utils.static_js("jquery/jquery-1.11.3.min.js") }}#}
+{#    {{ utils.static_js("d3/d3.js") }}#}
 {% endblock %}
