--- a/tcc3portal/train/templates/layouts/base.html
+++ b/tcc3portal/train/templates/layouts/base.html
@@ -49,6 +49,7 @@
 {% block styles %}
     {{ super() }}
     {{ utils.static_css("default.css") }}
+    {{ utils.static_js("train.js") }}
 
 {% endblock %}
 {% block scripts %}
