--- a/tcc3portal/tcc_frontend/static/css/frontend-default.css
+++ b/tcc3portal/tcc_frontend/static/css/frontend-default.css
@@ -266,3 +266,7 @@ background-color: #83a400;
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
+
+.sidebar {
+    margin: 70px 0;
+}
