1:fixed selector 2:fixed NO DATA

--- a/tcc3portal/tcc_frontend/templates/frontend/base.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/base.html
@@ -85,12 +85,14 @@
     <script src="{{tcc_frontend_find_resource('js/jquery/jquery-1.11.3.min.js', cdn='local')}}"></script>
 
     <link href="{{tcc_frontend_find_resource('bootstrap-datepicker-1.5.0-dist/css/bootstrap-datepicker.css', cdn='local')}}" rel="stylesheet">
-
-
     <script src="{{tcc_frontend_find_resource('bootstrap-datepicker-1.5.0-dist/js/bootstrap-datepicker.js', cdn='local')}}"></script>
-    <script src="{{tcc_frontend_find_resource('bootsidemenu/js/BootSideMenu.js', cdn='local')}}"></script>
 
+    <script src="{{tcc_frontend_find_resource('bootsidemenu/js/BootSideMenu.js', cdn='local')}}"></script>
     <link href="{{tcc_frontend_find_resource('bootsidemenu/css/BootSideMenu.css', cdn='local')}}" rel="stylesheet">
+
+    <script src="{{tcc_frontend_find_resource('bootstrap-select-1.7.2-dist/js/bootstrap-select.js', cdn='local')}}"></script>
+    <link href="{{tcc_frontend_find_resource('bootstrap-select-1.7.2-dist/css/bootstrap-select.css', cdn='local')}}" rel="stylesheet">
+
     <link href="{{tcc_frontend_find_resource('css/frontend-default.css', cdn='local')}}" rel="stylesheet">
 
 {% endblock %}
