--- a/tcc3portal/tcc_frontend/static/css/frontend-default.css
+++ b/tcc3portal/tcc_frontend/static/css/frontend-default.css
@@ -63,7 +63,14 @@ a:hover,
     color: #ddd;
     background-color: #83a400;
 }
-
+.dropdown-menu>.active>a,
+.dropdown-menu>.active>a:focus,
+.dropdown-menu>.active>a:hover{
+    color: #fff;
+    text-decoration: none;
+    background-color: #83a400;
+    outline: 0;
+}
 .navbar-default .navbar-nav > li > a
 {
     border-bottom: solid 3px transparent;
