--- a/tcc3portal/train/templates/dashboard.html
+++ b/tcc3portal/train/templates/dashboard.html
@@ -9,55 +9,72 @@
 <div class="container-fluid">
     <div class="row">
         <div id="sidebar" class=" col-md-2 col-md-5 col-md-2 ">
-        {#            <select class="combobox" name="lineid" style="width:100px; ">#}
-        {#                <option value="01">01</option>#}
-        {#                <option value="02">02</option>#}
-        {#                <option value="04">04</option>#}
-        {#                <option value="05">05</option>#}
-        {#                <option value="05">06</option>#}
-        {#            </select>#}
-        {#            <script type="text/javascript">#}
-        {#                $('.combobox').combobox()#}
-        {#            </script>#}
+                    <select class="selectpicker show-tick form-control" data-live-search="true">
+                        <optgroup label="Usable">
+                            <option value="01">01</option>
+                        </optgroup>
+                        <optgroup label="Unusable" disabled>
+                            <option value="02">02</option>
+                            <option value="04">04</option>
+                            <option value="05">05</option>
+                            <option value="06">06</option>
+                            <option value="07">07</option>
+                            <option value="08">08</option>
+                            <option value="09">09</option>
+                            <option value="10">10</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                            <option value="94">94</option>
+                            <option value="95">95</option>
+                            <option value="96">96</option>
+                            <option value="97">97</option>
+                            <option value="98">98</option>
+                        </optgroup>
+                    </select>
+{#                    <script>#}
+{#                        $('select').selectpicker();#}
+{#                    </script>#}
 
-            <div class="input-group">
-            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="true">
-            Line ID
-            <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">01</a></li>
-            <li><a href="#">02</a></li>
-            <li><a href="#">04</a></li>
-            <li><a href="#">05</a></li>
-            <li><a href="#">06</a></li>
-            <li><a href="#">07</a></li>
-            <li><a href="#">08</a></li>
-            <li><a href="#">09</a></li>
-            <li><a href="#">10</a></li>
-            <li><a href="#">13</a></li>
-            <li><a href="#">14</a></li>
-            <li><a href="#">15</a></li>
-            <li><a href="#">94</a></li>
-            <li><a href="#">95</a></li>
-            <li><a href="#">96</a></li>
-            <li><a href="#">97</a></li>
-            <li><a href="#">98</a></li>
-            </ul>
-            </div>
+{#            <div class="input-group">#}
+{#            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"#}
+{#            aria-haspopup="true" aria-expanded="true">#}
+{#            Line ID#}
+{#            <span class="caret"></span>#}
+{#            </button>#}
+{#            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">#}
+{#            <li><a href="#">01</a></li>#}
+{#            <li><a href="#">02</a></li>#}
+{#            <li><a href="#">04</a></li>#}
+{#            <li><a href="#">05</a></li>#}
+{#            <li><a href="#">06</a></li>#}
+{#            <li><a href="#">07</a></li>#}
+{#            <li><a href="#">08</a></li>#}
+{#            <li><a href="#">09</a></li>#}
+{#            <li><a href="#">10</a></li>#}
+{#            <li><a href="#">13</a></li>#}
+{#            <li><a href="#">14</a></li>#}
+{#            <li><a href="#">15</a></li>#}
+{#            <li><a href="#">94</a></li>#}
+{#            <li><a href="#">95</a></li>#}
+{#            <li><a href="#">96</a></li>#}
+{#            <li><a href="#">97</a></li>#}
+{#            <li><a href="#">98</a></li>#}
+{#            </ul>#}
+{#            </div>#}
 
             <div id="datepicker-container" >
-                <div class="input-group date">
-                    <input type="text" class="form-control" readonly>
+                <div class="input-group date" >
+                    <input id="datepicker" type="text" class="form-control" value="07/02/2014" readonly data-provide="datepicker">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
                 </div>
                 <script>
                     $('#datepicker-container .input-group.date').datepicker({
-                    autoclose: false,
-                    todayBtn: "linked",
-                    format: "mm/dd/yyyy",
-                    orientation: "bottom auto",
+                        autoclose: false,
+                        todayBtn: "linked",
+                        format: "mm/dd/yyyy",
+                        orientation: "bottom auto",
+                        todayHighlight: "true"
                     });
                 </script>
             </div>
@@ -65,11 +82,31 @@
             <div class="btn-group" role="group" aria-label="...">
                 <button type="button" class="btn btn-default">Reset</button>
                 <button id="btn_confirm" type="button" class="btn btn-default"
-                        onclick="getSchedules($('#train_graph'),'20140702','01','plan')" >Confirm</button>
+                         >
+                    Confirm
+                </button>
+{#                onclick="getSchedules($('#train_graph'),'20140702','01','plan')"#}
+                <script>
+                    $('#btn_confirm').click(function () {
+                        var dp = $('#datepicker')[0];
+                        var graph_date = new Date(dp.value);
+                        var str_date =  date_to_string(graph_date);
+                        var str_line_no = $('.selectpicker')[0].value;
+                        console.log('date:'+str_date+',line:'+str_line_no)
+                        getSchedules($('#train_graph'),str_date, str_line_no,'plan')
+                    });
+
+                    function date_to_string(date){
+                        var dd = date.getDate() < 10 ? "0" + date.getDate() : date.getDate().toString();
+                        var mm = (date.getMonth()+1) < 10 ? "0" + (date.getMonth()+1) : (date.getMonth()+1).toString();
+                        var yyyy = date.getFullYear().toString();
+                        return yyyy + mm + dd;
+                    }
+                </script>
             </div>
 
         </div>
-        <div id="train_graph" >
+        <div id="train_graph">
 {#            style="height: 400px; background-color: green"#}
 {#            class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2"#}
         </div>
