支持plan&real多项查询和绘图

--- a/tcc3portal/train/templates/layouts/base.html
+++ b/tcc3portal/train/templates/layouts/base.html
@@ -16,7 +16,7 @@
                 <a class="dropdown-toggle" href="#">{{ _('Marey Diagram') }}</a>
                 <ul class="dropdown-menu">
                     <li><a href="{{ url_for('config.index') }}">{{ _('Line Config') }}</a></li>
-                    <li><a href="{{ url_for('schedule.index') }}">{{ _('Upload Schedule Data') }}</a></li>
+                    <li><a href="{{ url_for('schedule.upload') }}">{{ _('Upload Schedule Data') }}</a></li>
                 </ul>
             </li>
 {#            <li><a href="http://dormousehole.readthedocs.org/en/latest/index.html">flask</a></li>#}
