--- a/tcc3portal/train/templates/schedule_view.html
+++ b/tcc3portal/train/templates/schedule_view.html
@@ -25,25 +25,45 @@
             {% endfor %}
         </div>
         <form method="post" class="form-horizontal" role="form"
-{#              action="{{ url_for('schedule.upload') }}"#}
+{#                action="{{ url_for('schedule.upload') }}"#}
                 enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             {{ form.csrf_token }}
             <div class="form-group ">
-                <div class="col-sm-3">
-                    {{ form.date() }}
-                    {% for error in form.errors.line_no %}
+                <div class="col-sm-2">
+                    <div id="datepicker-container" >
+                        <div class="input-group date" >
+                            {{ form.date(class="form-control") }}
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+                        </div>
+                        <script>
+                            $('#datepicker-container .input-group.date').datepicker({
+                                autoclose: false,
+                                todayBtn: "linked",
+                                format: "yyyy-mm-dd",
+                                orientation: "bottom auto",
+                                todayHighlight: "true"
+                            });
+                        </script>
+                    </div>
+
+                    {% for error in form.errors.date %}
                      <span style="color:red;">* {{ error }}</span>
                     {% endfor %}
                 </div>
-    {#            {{ form.config_file.label(class="control-label") }}#}
+                <div class="col-sm-2">
+                    {{ form.type(size=20, class="selectpicker show-tick form-control") }}
+                    {% for error in form.errors.type %}
+                     <span style="color:red;">* {{ error }}</span>
+                    {% endfor %}
+                </div>
                 <div class="col-sm-6">
                     {{ form.file(size=20, class="form-control ", accept=".csv") }}
-                    {% for error in form.errors.config_file %}
+                    {% for error in form.errors.file %}
                      <span style="color:red;">* {{ error }}</span>
                     {% endfor %}
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <input type="submit" value="{{ _('Upload') }}" class="btn btn-success form-control" >
                 </div>
             </div>
