--- a/tcc3portal/train/templates/marey_diagram_view.html
+++ b/tcc3portal/train/templates/marey_diagram_view.html
@@ -8,28 +8,27 @@
             <div class="span12">
                 <div class="row-fluid">
                     <div class="span12">
-                        <select id="line_no" class="selectpicker show-tick form-control" data-live-search="true">
-                            <optgroup label="Usable">
-                                <option value="01">01</option>
-                            </optgroup>
-                            <optgroup label="Unusable" disabled>
-                                <option value="02">02</option>
-                                <option value="04">04</option>
-                                <option value="05">05</option>
-                                <option value="06">06</option>
-                                <option value="07">07</option>
-                                <option value="08">08</option>
-                                <option value="09">09</option>
-                                <option value="10">10</option>
-                                <option value="13">13</option>
-                                <option value="14">14</option>
-                                <option value="15">15</option>
-                                <option value="94">94</option>
-                                <option value="95">95</option>
-                                <option value="96">96</option>
-                                <option value="97">97</option>
-                                <option value="98">98</option>
-                            </optgroup>
+                        <select id="line_no" class="selectpicker show-tick form-control" data-live-search="false">
+                            <option value="01">01</option>
+                            <option value="02">02</option>
+                            <option value="04">04</option>
+                            <option value="05">05</option>
+                            <option value="06">06</option>
+                            <option value="07">07</option>
+                            <option value="08">08</option>
+                            <option value="09">09</option>
+                            <option value="10">10</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                            <option value="15">15</option>
+                            <option value="94">94</option>
+                            <option value="95">95</option>
+                            <option value="96">96</option>
+                            <option value="97">97</option>
+                            <option value="98">98</option>
+{#                            <optgroup label="Unusable" disabled>#}
+{#                                #}
+{#                            </optgroup>#}
                         </select>
                     </div>
                 </div>
