--- a/tcc3portal/tcc_frontend/templates/frontend/footer.html
+++ b/tcc3portal/tcc_frontend/templates/frontend/footer.html
@@ -8,7 +8,7 @@
                 {% endautoescape %}
                 |
                 {% autoescape false %}
-                {{ _('Copyright &copy; 2015, %(author)s', author= '<a href="mailto:vito2015@live.com">Vito</a>') }}
+                {{ _('Copyright &copy; 2015 %(author)s', author= '<a href="mailto:vito2015@live.com">Vito</a>') }}
                 {% endautoescape %}
                 {% endblock %}
             </div>
